# neide

./: .gitignore  README.md
software/: CMakeLists.txt  CMakelists.txt
software/code/: CMakeLists.txt
software/code/arduino/: CMakeLists.txt
software/code/arduino/src/: air_irrigator.c  air_irrigator.cpp  air_irrigator.h  air_irrigator.hpp  irrigator.c  irrigator.h  main.c  main.cpp  pin_utils.c  pin_utils.h  soil_irrigator.c  soil_irrigator.cpp  soil_irrigator.h  soil_irrigator.hpp  wrap_up_action.c  wrap_up_action.cpp  wrap_up_action.h  wrap_up_action.hpp
software/code/arduino/src/air_humidity_sensors/: dht11.c  dht11.h
software/code/arduino/src/air_interface/: air_interface.c  air_interface.cpp  air_interface.h  air_interface.hpp
software/code/arduino/src/air_sensors/: dht11.c  dht11.cpp  dht11.h  dht11.hpp
software/code/arduino/src/clock/: clock.h  clock.hpp
software/code/arduino/src/devices/: adc_potentiometer.cpp  adc_potentiometer.hpp  potentiometer_interface.hpp
software/code/arduino/src/irrigation_time_providers/: potentiometer_irrigation_time_provider.cpp  potentiometer_irrigation_time_provider.hpp
software/code/arduino/src/memory/: memory.cpp
software/code/arduino/src/pin_utils/: adc_defs.hpp  adc_utils.c  adc_utils.cpp  adc_utils.h  adc_utils.hpp  gpio_utils.c  (+3 more)
software/code/core/: CMakeLists.txt
software/code/core/include/: air_humidity_check_state.h  air_humidity_check_state.hpp  air_periodic_check_state.h  air_periodic_check_state.hpp  common.h  core.h  core.hpp  core_state_handle.h  core_state_interface.h  core_state_interface.hpp  core_state_interface_construction.h  core_state_interface_construction.hpp  core_states.h  core_states.hpp  idle_state.h  idle_state.hpp  irrigate_air_state.h  irrigate_air_state.hpp  irrigate_soil_state.h  irrigate_soil_state.hpp  irrigation_time_provider_interface.hpp  irrigator_interface.h  irrigator_interface.hpp  irrigator_interface_construction.h  irrigator_interface_construction.hpp  soil_humidity_check_state.h  soil_humidity_check_state.hpp  soil_irrigator_interface.h  soil_irrigator_interface_construction.h  soil_periodic_check_state.h  soil_periodic_check_state.hpp  standard_configuration.h  standard_configuration.hpp  time_from_last_irrigation_provider_interface.hpp  woke_state.h  woke_state.hpp  wrap_up_action_interface.hpp  wrap_up_action_interface_construction.h  wrap_up_action_interface_construction.hpp  wrap_up_state.h  (+1 more)
software/code/core/src/: air_humidity_check_state.c  air_humidity_check_state.cpp  air_periodic_check_state.c  air_periodic_check_state.cpp  core.c  core.cpp  core_state_handle.c  core_state_interface.c  core_state_interface.cpp  core_state_interface_private.h  idle_state.c  idle_state.cpp  irrigate_air_state.c  irrigate_air_state.cpp  irrigate_soil_state.c  irrigate_soil_state.cpp  irrigator_interface.c  irrigator_interface.cpp  soil_humidity_check_state.c  soil_humidity_check_state.cpp  soil_irrigator_interface.c  soil_periodic_check_state.c  soil_periodic_check_state.cpp  standard_configuration.c  standard_configuration.cpp  woke_state.c  woke_state.cpp  wrap_up_action_interface.c  wrap_up_action_interface.cpp  wrap_up_state.c  wrap_up_state.cpp
software/code/main/: CMakeLists.txt
software/code/main/src/: main.c  wrap_up_action.c
software/code/sample/: CMakeLists.txt
software/code/sample/src/: irrigator.c  irrigator.cpp  irrigator.h  irrigator.hpp  main.c  main.cpp  wrap_up_action.c  wrap_up_action.cpp  wrap_up_action.h  wrap_up_action.hpp
software/tests/: CMakeLists.txt
software/tests/core/: CMakeLists.txt  core_test.cpp  stubs.cpp  stubs.h  stubs.hpp  stubs_cpp.hpp
software/toolchains/: generic-gcc-avr.cmake
(+65 files in other folders)
